# MarineAnalytics

./: .env.example  .gitignore  ARCHITECTURE.md  CODING_STANDARDS.md  DEVELOPMENT_RULES.md  IMPORT_AND_REDIS_SYNC_PLAN.md  PROJECT.md  README.md  SETUP.md  TASKS.md  docker-compose.yml  opencode.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_continuous_aggregate.py  0003_aircraft_positions.py  6828efc9c5b6_fix_ts_to_timestamptz_in_position_.py  a1001_vessel_photo_url.py  b1001_ports_table.py  b1002_seed_major_ports.py  b1003_idle_events.py  b1004_fleets.py  bb1a1e6ee14a_add_missing_indexes_aircraft_bbox_.py  c1001_aircraft_id.py  d1001_vessel_particulars.py  d1003_vessel_events.py  d1004_aircraft_extend.py  e0d077546415_compression_retention_policy_daily_.py
backend/app/: main.py
backend/app/alerts/: geofence_engine.py  idle_engine.py  port_engine.py
backend/app/api/: aircraft.py  alerts.py  exports.py  fleets.py  geofences.py  idle_events.py  import_api.py  monitoring.py  ports.py  stats.py  trade_flows.py  vessels.py  weather.py
backend/app/core/: config.py  db.py  errors.py  logging.py  rate_limiter.py  redis.py
backend/app/ingestion/: adsb_writer.py  adsbexchange_client.py  aisstream_client.py  decoder.py  metrics.py  opensky_client.py  ship_types.py  writer.py
backend/app/models/: __init__.py  aircraft.py  alert.py  fleet.py  geofence.py  idle.py  port.py  position.py  vessel.py  (+1 more)
backend/tests/: conftest.py  e2e_smoke_test.py  load_test_ingestion.py  load_test_sse.py  test_api_vessels.py  test_decoder.py  test_geofence_engine.py
(+123 files in other folders)
