[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marineanalytics-backend"
version = "0.1.0"
description = "MarineAnalytics backend — AIS/ADS-B ingestion, REST API, realtime SSE"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis[hiredis]>=5.0.0",
    "sse-starlette>=2.1.0",
    "pyais>=1.7.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",
    "structlog>=24.1.0",
    "geoalchemy2>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-env>=1.1.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-redis>=4.6.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "ASYNC", "S", "T20"]
ignore = ["S101", "S104"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "T20"]
"alembic/**" = ["E", "F", "I"]
"app/api/**" = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
env = [
    "AISSTREAM_API_KEY=test_key_for_ci",
]
